--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "yt_backend",
   "version": "1.0.0",
   "description": "A backend service for YouTube-like application",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "Ritik Jain",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
